--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
 
 <body>
 	<head>
-		<h1>This is a buffer creator app</h1>
+		<img src="./assets/flask.png" id="flask"><h1>The Buffer App</h1>
 	</head>
   <app-controller></app-controller>
 </body>
