--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
 <script src="./components/bufferViewer.js"></script>
 <script src="./components/listView.js"></script>
 <script src="./components/listViewEntry.js"></script>
+<script src="./components/addChemical.js"></script>
 <link rel="stylesheet" href="styles.css"></link>
 </header>
 
