Added live search functionality

--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,10 @@
 <script src="./components/listView.js"></script>
 <script src="./components/listViewEntry.js"></script>
 <script src="./components/addChemical.js"></script>
+<script src="./msds.js"></script>
+<script src="./bower_components/jquery/dist/jquery.min.js"></script>
+<script src="./bower_components/jquery-ui/jquery-ui.min.js"></script>
+<script src="./bower_components/jquery-marcopolo/build/parts/jquery.marcopolo.min.js"></script>
 <link rel="stylesheet" href="styles.css"></link>
 </header>
 
